err/sc2.err
Listing '.'...
Listing './bin'...
Compiling './bin/portserver.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/portpicker-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Listing './lib/python3.5/site-packages/s2clientprotocol'...
Listing './lib/python3.5/site-packages/s2clientprotocol-4.1.3.61021.0.dist-info'...
Listing './lib/python3.5/site-packages/sc2'...
Compiling './lib/python3.5/site-packages/sc2/action.py'...
***   File "./lib/python3.5/site-packages/sc2/action.py", line 33
    raise RuntimeError(f"Must target an unit or a point or None, found '{target !r}'")
                                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sc2/bot_ai.py'...
***   File "./lib/python3.5/site-packages/sc2/bot_ai.py", line 131
    print(f"Error: {r} (action: {action})")
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sc2/game_data.py'...
***   File "./lib/python3.5/site-packages/sc2/game_data.py", line 42
    return f"AbilityData(name={self._proto.button_name})"
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sc2/game_state.py'...
***   File "./lib/python3.5/site-packages/sc2/game_state.py", line 17
    assert attr in self.ATTRIBUTES, f"'{attr}' is not a valid attribute"
                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sc2/ids'...
Compiling './lib/python3.5/site-packages/sc2/maps.py'...
***   File "./lib/python3.5/site-packages/sc2/maps.py", line 17
    raise KeyError(f"Map '{name}' was not found")
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sc2/paths.py'...
***   File "./lib/python3.5/site-packages/sc2/paths.py", line 26
    print(f"Unsupported platform '{PF}'")
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sc2/power_source.py'...
***   File "./lib/python3.5/site-packages/sc2/power_source.py", line 23
    return f"PowerSource({self.position}, {self.radius})"
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sc2/protocol.py'...
***   File "./lib/python3.5/site-packages/sc2/protocol.py", line 41
    raise ProtocolError(f"{response.error}")
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sc2/sc2process.py'...
***   File "./lib/python3.5/site-packages/sc2/sc2process.py", line 60
    return f"ws://127.0.0.1:{self._port}/sc2api"
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sc2/unit.py'...
***   File "./lib/python3.5/site-packages/sc2/unit.py", line 170
    return f"Unit(name={self.name !r}, tag={self.tag})"
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sc2-0.3.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/websockets'...
Listing './lib/python3.5/site-packages/websockets/extensions'...
Listing './lib/python3.5/site-packages/websockets/py35'...
Listing './lib/python3.5/site-packages/websockets-4.0.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
